--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital@0;1&family=Work+Sans&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital@0;1&family=Source+Sans+3:wght@200..900&family=Work+Sans&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <H1>dcwc</H1>
-    
+    <header class="header">
+        <div class="header-div">
+            <a href=""><img width="126" height="63" src="./images/лого.png" alt=""></a>
+            <nav>
+                <ul class="nav-list">
+                    <li><a class="nav-link" href="">Головна</a></li>
+                    <li><a class="nav-link" href="">Каталог</a></li>
+                    <li><a class="nav-link" href="">Про нас</a></li>
+                    <li><a class="nav-link" href="">Як замовити</a></li>
+                    <li><a class="nav-link" href="">Відгуки </a></li>
+                    <li><a class="nav-link" href="">Контакти</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-container">
+            <div class="image-container">
+                <img class="round" src="./images/round.png" alt="">
+                <img class="flower-header" src="./images/flower-header.png" alt="">
+            </div>
+            <h3 class="header-title"> Неймовірні </h3>
+            <h1 class="header-text"> Букети <span class="header-span">зі свіжих квітів</span> </h1>
+        </div>
+        
+
+
+    </header>
+
 </body>
+
 </html>
