--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             </div>
             <h3 class="header-title"> Неймовірні </h3>
             <h1 class="header-text"> Букети <span class="header-span">зі свіжих квітів</span> </h1>
+            <p class="text-p">З доставкою по Києву протягом 1 години</p>
+            <a class="header-btn" href="">ЗАМОВИТИ КВІТИ</a>
         </div>
         
 
