--- a/index.html
+++ b/index.html
@@ -42,9 +42,20 @@
             <p class="text-p">З доставкою по Києву протягом 1 години</p>
             <a class="header-btn" href="">ЗАМОВИТИ КВІТИ</a>
         </div>
-        
-
-
+       <ul class="head-list">
+        <li class="head-item">
+            <img src="./images/1f.png" alt="">
+            <p class="head-text">Щоденне оновлення свіжих квітів</p>
+        </li>
+        <li class="head-item">
+            <img src="./images/2f.png" alt="">
+            <p class="head-text">Безкоштовна доставка в будь яку точку міста</p>
+        </li>
+        <li class="head-item">
+            <img src="./images/3f.png" alt="">
+            <p class="head-text">Більше 1000 сортів квітів з усього світу</p>
+        </li>
+       </ul>
     </header>
 
 </body>
