--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         </li>
        </ul>
     </header>
+    <section class="katalog-section">
+        <img class="img-section2" src="./images/section2.png" alt="">
+        <h3 class="katalog-text">Каталог </h3>
+    </section>
 
 </body>
 
