--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <section class="katalog-section">
         <img class="img-section2" src="./images/section2.png" alt="">
         <h3 class="katalog-text">Каталог </h3>
+        <hr class="katalog-line">
     </section>
 
 </body>
