--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <img class="img-section2" src="./images/section2.png" alt="">
         <h3 class="katalog-text">Каталог </h3>
         <hr class="katalog-line">
+        <div class="katalog-box">
+            <h2 class="box-text">Доставка квітів в Києві</h2>
+            <div class="katalog-box-two"></div>
+        </div>
     </section>
 
 </body>
