--- a/index.html
+++ b/index.html
@@ -88,6 +88,47 @@
                 </ul>
             </div>
         </div>
+        <div class="flover">
+            <h3 class="flower-title">Хіт продажів</h3>
+            <ul class="flower-list">
+                <li class="flower-item" >
+                    <img class="heart" src="./images/heart.png" alt="">
+                    <img src="./images/image1.png" alt="">
+                    <p class="flower-text">500 ₴ 700 ₴</p>
+                    <span class="flower-span">Мінібукет 1400-2</span>
+                </li>
+                <li class="flower-item">
+                    <img class="heart" src="./images/heart.png" alt="">
+                    <img src="./images/image2.png" alt="">
+                    <p class="flower-text">800 ₴</p>
+                    <span class="flower-span">Мінібукет 1600-6</span>
+                </li>
+                <li class="flower-item">
+                    <img class="heart" src="./images/heart.png" alt="">
+                    <img src="./images/image3.png" alt="">
+                    <p class="flower-text">1000 ₴</p>
+                    <span class="flower-span">Троянда Freedom 51 шт.</span>
+                </li>
+                <li class="flower-item">
+                    <img class="heart" src="./images/heart.png" alt="">
+                    <img src="./images/image4.png" alt="">
+                    <p class="flower-text">680 ₴</p>
+                    <span class="flower-span">Мінібукет 1400-3</span>
+                </li>
+                <li class="flower-item">
+                    <img class="heart" src="./images/heart.png" alt="">
+                    <img src="./images/image5.png" alt="">
+                    <p class="flower-text">450 ₴</p>
+                    <span class="flower-span">«Бархатний сезон»</span>
+                </li>
+                <li class="flower-item" >
+                    <img class="heart" src="./images/heart.png" alt="">
+                    <img src="./images/image6.png" alt="">
+                    <p class="flower-text">56 ₴</p>
+                    <span class="flower-span">Нобіліс</span>
+                </li>
+            </ul>
+        </div>
     </section>
 
 </body>
