--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 <li class="flower-item" >
                     <img class="heart" src="./images/heart.png" alt="">
                     <img src="./images/image1.png" alt="">
-                    <p class="flower-text">500 ₴ 700 ₴</p>
+                    <button class="flover-link" href="">Акція</button>
+                    <p class="flower-text">500 ₴<span class="span-text-text">700 ₴</span></p>
                     <span class="flower-span">Мінібукет 1400-2</span>
                 </li>
                 <li class="flower-item">
