--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                 <li class="flower-item">
                     <img class="heart" src="./images/heart.png" alt="">
                     <img src="./images/image5.png" alt="">
+                     <div class="flover-link2">
+                        <img src="./images/seedling.png" alt="">
+                        <a class="flover-link-p" href="">Новинка</a>
+                     </div>
                     <p class="flower-text">450 ₴</p>
                     <span class="flower-span">«Бархатний сезон»</span>
                 </li>
