--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                 <li class="flower-item" >
                     <img class="heart" src="./images/heart.png" alt="">
                     <img src="./images/image6.png" alt="">
+                    <div class="flover-link2 pp">
+                        <img src="./images/tint.png" alt="">
+                        <a class="flover-link-p" href="">з водою</a>
+                     </div>
                     <p class="flower-text">56 ₴</p>
                     <span class="flower-span">Нобіліс</span>
                 </li>
