--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
             </ul>
             <button class="flower-btn">Дивитись всі</button>
         </div>
-        <h1>ecececec</h1>
+    </section>
+    <section class="control">
+        <h2 class="control-title">Якість в деталях</h2>
+        <hr class="control-line">
     </section>
 
 </body>
