--- a/index.html
+++ b/index.html
@@ -143,6 +143,19 @@
     <section class="control">
         <h2 class="control-title">Якість в деталях</h2>
         <hr class="control-line">
+        <div class="wrapper">
+            <div class="control-div">
+                <img src="./images/control1.png" alt="">
+                <div class="div-text">
+                    <h2 class="control-text">Контроль свіжості квітів </h2>
+                    <p class="control-p">Ми співпрацюємо з кращими постачальниками квітів і готові запропонувати Вам <span class="control-span">широкий асортимент квітів</span>, починаючи від місцевих сортів і закінчуючи рідкісними імпортованими варіантами. <br>
+                        <br>
+                         Ваша близька людина отримає найкращий подарунок, адже ми ретельно підбираємо кожну квітку для вашого
+                    букету.</p>
+                </div>
+            </div>
+    
+        </div>
     </section>
 
 </body>
