--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
                     букету.</p>
                 </div>
             </div>
+            <div class="control-div">
+                <img src="./images/control3.png" alt="">
+                <div class="div-text">
+                    <h2 class="control-text tet">Швидка доставка </h2>
+                    <p class="control-p">Ми робимо доставки по Україні протягом <span class="control-span">3-х годин</span> з моменту оплати замовлення.  </p>
+                </div>
+            </div>
     
         </div>
     </section>
