--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
                     букету.</p>
                 </div>
             </div>
+            <div class="control-div divcon">
+                <div class="div-text ">
+                    <h2 class="control-text tet-text">Оформлення букетів </h2>
+                    <p class="control-p pep">Ми готові зібрати <span class="control-span">унікальний букет по індивідуальному замовленню</span> . Наші флористи втілять в життя будь яку Вашу ідею! </p>
+                </div>
+                <img src="./images/control2.png" alt="">
+            </div>
             <div class="control-div">
                 <img src="./images/control3.png" alt="">
                 <div class="div-text">
