--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
     
         </div>
     </section>
+    <section class="response">
+        <h2 class="response-title">Не можете визначитись з вибором букету?</h2>
+        <hr class="response-line">
+        <img src="./images/response.png" alt="">
+
+    </section>
 
 </body>
 
