--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
         <h2 class="response-title">Не можете визначитись з вибором букету?</h2>
         <hr class="response-line">
         <img src="./images/response.png" alt="">
+        <div class="div-form">
+
+        </div>
 
     </section>
 
