--- a/index.html
+++ b/index.html
@@ -175,10 +175,18 @@
         <h2 class="response-title">Не можете визначитись з вибором букету?</h2>
         <hr class="response-line">
         <img src="./images/response.png" alt="">
-        <div class="div-form">
-
+        <div class="response-div">
+            <div class="form-div">
+                <h4 class="form-title"> <span class="form-span">Відправте заявку  <br></span> і Вам зателефонують <br> протягом однієї хвилини</h4>
+                <form class="form" action="">
+                    <input class="input" type="text" placeholder="Ім’я">
+                    <input class="input" type="hpone" placeholder="Телефон">
+                    <button class="form-btn" type="submit">Залишити заявку</button>
+                </form>
+            </div>
+            <div></div>
         </div>
-
+    
     </section>
 
 </body>
