--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                 <h4 class="form-title"> <span class="form-span">Відправте заявку  <br></span> і Вам зателефонують <br> протягом однієї хвилини</h4>
                 <form class="form" action="">
                     <input class="input" type="text" placeholder="Ім’я">
-                    <input class="input" type="hpone" placeholder="Телефон">
-                    <button class="form-btn" type="submit">Залишити заявку</button>
+                    <input class="input" type="tel" placeholder="Телефон">
+                    <button class="form-btn" type="button">Залишити заявку</button>
                 </form>
             </div>
             <div></div>
