--- a/index.html
+++ b/index.html
@@ -184,7 +184,13 @@
                     <button class="form-btn" type="button">Залишити заявку</button>
                 </form>
             </div>
-            <div></div>
+            <div class="response-tel">
+                <h2 class="tel-title">Наш менеджер по телефону: </h2>
+                <div>
+                    <img src="./images/Vector.png" alt="">
+                    <p>Відповість на будь які запитання</p>
+                </div>
+            </div>
         </div>
     
     </section>
