--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
             </div>
             <div class="response-tel">
                 <h2 class="tel-title">Наш менеджер по телефону: </h2>
-                <div>
+                <div class="tel-div">
                     <img src="./images/Vector.png" alt="">
-                    <p>Відповість на будь які запитання</p>
+                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
                 </div>
             </div>
         </div>
