--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
                     <img src="./images/Vector.png" alt="">
                     <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
                 </div>
+                <div class="tel-div">
+                    <img src="./images/Vector.png" alt="">
+                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
+                </div>
+                <div class="tel-div">
+                    <img src="./images/Vector.png" alt="">
+                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
+                </div>
+                <div class="tel-div">
+                    <img src="./images/Vector.png" alt="">
+                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
+                </div>
             </div>
         </div>
     
