--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
                 </div>
                 <div class="tel-div">
                     <img src="./images/Vector.png" alt="">
-                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
+                    <p class="tel-text"><span class="tel-text-span">Підбере рішення</span> відповідно <br> до ваших запитів <span class="tel-text-span">та</span> бажань</p>
                 </div>
                 <div class="tel-div">
                     <img src="./images/Vector.png" alt="">
-                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
+                    <p class="tel-text"> <span class="tel-text-span">Підготує унікальну пропозицію</span> <br> та детально розповість Вам про наші букети</p>
                 </div>
                 <div class="tel-div">
                     <img src="./images/Vector.png" alt="">
-                    <p class="tel-text"><span class="tel-text-span">Відповість</span> на будь які запитання</p>
+                    <p class="tel-text"> <span class="tel-text-span">Оформить</span> для Вас подарунок-сюрприз</p>
                 </div>
             </div>
         </div>
