--- a/index.html
+++ b/index.html
@@ -221,11 +221,49 @@
               <div class="swiper-slide"><img src="./images/3.png" alt=""></div>
               <div class="swiper-slide"><img src="./images/4.png" alt=""></div>
             </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination left"></div>
+            <div class="swiper-button-prev right"></div>
             <div class="swiper-button-next"></div>
-          
           </div>
+          <hr class="client-line">
+    </section>
+    <section class="footer">
+        <div class="footer-div">
+            <div>
+                <ul class="footer-list">
+                    <li class="footer-item"><a class="nav-link" href="">Головна</a></li>
+                    <li class="footer-item"><a class="nav-link" href="">Каталог</a></li>
+                    <li class="footer-item"><a class="nav-link" href="">Відгуки </a></li>
+                    <li class="footer-item"><a class="nav-link" href="">Як замовити</a></li>
+                    <li class="footer-item"><a class="nav-link" href="">Контакти</a></li>
+                </ul>
+            </div>
+            <div class="footer-logo">
+                <a href=""><img width="264" height="137" src="./images/лого.png" alt=""></a>
+                <ul>
+                    <li><a href=""><img src="./images/phone.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/tviter.png" alt=""></a></li>
+                    <li><a href=""><img src="./images/facebook.png" alt=""></a></li>
+                </ul>
+            </div>
+            <div>
+                <div>
+                    <a class="phone-link" href="tel:+380977775577">+38097 777 55 77</a>
+                    <p>Наш телефон</p>
+                </div>
+                <div>
+                    <a class="phone-link">info@floverlover.ua</a>
+                    <p>Контактний е-mail</p>
+                </div>
+                <div>
+                    <p>Київ <br>вул. Маріупольська, 14.</p>
+                    <span>Наш магазин</span>
+                    
+                </div>
+            </div>
+
+        </div>
+
     </section>
 
 
