--- a/index.html
+++ b/index.html
@@ -231,19 +231,19 @@
         <div class="footer-div">
             <div>
                 <ul class="footer-list">
-                    <li class="footer-item"><a class="nav-link" href="">Головна</a></li>
-                    <li class="footer-item"><a class="nav-link" href="">Каталог</a></li>
-                    <li class="footer-item"><a class="nav-link" href="">Відгуки </a></li>
-                    <li class="footer-item"><a class="nav-link" href="">Як замовити</a></li>
-                    <li class="footer-item"><a class="nav-link" href="">Контакти</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="">Головна</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="">Каталог</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="">Відгуки </a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="">Як замовити</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="">Контакти</a></li>
                 </ul>
             </div>
             <div class="footer-logo">
                 <a href=""><img width="264" height="137" src="./images/лого.png" alt=""></a>
-                <ul>
-                    <li><a href=""><img src="./images/phone.png" alt=""></a></li>
-                    <li><a href=""><img src="./images/tviter.png" alt=""></a></li>
-                    <li><a href=""><img src="./images/facebook.png" alt=""></a></li>
+                <ul class="cosial-link">
+                    <li><a href="tel:+380977775577" target="_blank"><img src="./images/phone.png" alt=""></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/tviter.png" alt=""></a></li>
+                    <li><a href="https://uk-ua.facebook.com/" target="_blank"><img src="./images/facebook.png" alt=""></a></li>
                 </ul>
             </div>
             <div>
