--- a/index.html
+++ b/index.html
@@ -246,18 +246,18 @@
                     <li><a href="https://uk-ua.facebook.com/" target="_blank"><img src="./images/facebook.png" alt=""></a></li>
                 </ul>
             </div>
-            <div>
+            <div class="footer-div3">
                 <div>
                     <a class="phone-link" href="tel:+380977775577">+38097 777 55 77</a>
-                    <p>Наш телефон</p>
+                    <p class="footer-link-text">Наш телефон</p>
                 </div>
                 <div>
-                    <a class="phone-link">info@floverlover.ua</a>
-                    <p>Контактний е-mail</p>
+                    <a class="phone-link" href="mailto:info@floverlover.ua" target="_blank">info@floverlover.ua</a>
+                    <p class="footer-link-text">Контактний е-mail</p>
                 </div>
                 <div>
-                    <p>Київ <br>вул. Маріупольська, 14.</p>
-                    <span>Наш магазин</span>
+                    <p class="footer-kiev">Київ <br>вул. Маріупольська, 14.</p>
+                    <span class="footer-link-text">Наш магазин</span>
                     
                 </div>
             </div>
