--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                 </div>
             </div>
         </div>
+        
     </section>
     <section class="client">
         <div class="swiper">
@@ -265,6 +266,13 @@
         </div>
 
     </section>
+
+    <div class="hidden-div">
+        <a class="close-link" href=""><img src="./images/close.png" alt=""></a>
+        <h2 class="hidden-title">Дякуємо!</h2>
+        <p class="hidden-text">Найближчим часом наш менеджер звʼяжеться з вами.</p>
+        <hr class="hidden-line">
+    </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
