--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <form class="form" action="">
                     <input class="input" type="text" placeholder="Ім’я">
                     <input class="input" type="tel" placeholder="Телефон">
-                    <button class="form-btn" type="button">Залишити заявку</button>
+                    <button class="form-btn js-btnReq" type="button">Залишити заявку</button>
                 </form>
             </div>
             <div class="response-tel">
@@ -267,7 +267,7 @@
 
     </section>
 
-    <div class="hidden-div">
+    <div class="hidden-div show-modal">
         <a class="close-link" href=""><img src="./images/close.png" alt=""></a>
         <h2 class="hidden-title">Дякуємо!</h2>
         <p class="hidden-text">Найближчим часом наш менеджер звʼяжеться з вами.</p>
