--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </section>
 
     <div class="hidden-div show-modal">
-        <a class="close-link" href=""><img src="./images/close.png" alt=""></a>
+        <a class="close-link link-close" href=""><img src="./images/close.png" alt=""></a>
         <h2 class="hidden-title">Дякуємо!</h2>
         <p class="hidden-text">Найближчим часом наш менеджер звʼяжеться з вами.</p>
         <hr class="hidden-line">
