--- a/index.html
+++ b/index.html
@@ -267,12 +267,18 @@
 
     </section>
 
-    <div class="hidden-div show-modal">
-        <a class="close-link link-close" href=""><img src="./images/close.png" alt=""></a>
-        <h2 class="hidden-title">Дякуємо!</h2>
-        <p class="hidden-text">Найближчим часом наш менеджер звʼяжеться з вами.</p>
-        <hr class="hidden-line">
-    </div>
+    <div class="backdrop">
+        <div class="hidden-div">
+          <button class="close-link link-close">
+            <img src="./images/close.png" alt="" />
+          </button>
+          <h2 class="hidden-title">Дякуємо!</h2>
+          <p class="hidden-text">
+            Найближчим часом наш менеджер звʼяжеться з вами.
+          </p>
+          <hr class="hidden-line" />
+        </div>
+      </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
