--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <div class="backdrop">
         <div class="hidden-div">
           <button class="close-link link-close">
-            <img src="./images/close.png" alt="" />
+            <img width="50" height="50" src="./images/close.png" alt="" />
           </button>
           <h2 class="hidden-title">Дякуємо!</h2>
           <p class="hidden-text">
