--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
                 <ul class="prise-list">
                     <li class="prise-item">
                         <span class="prise-item">Ціна ...</span>
-                        <a class="prise-link" href=""><img src="./images/down.png" alt=""></a>
+                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Квіти ...</span>
-                        <a class="prise-link" href=""><img src="./images/down.png" alt=""></a>
+                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Кому ...</span>
-                        <a class="prise-link" href=""><img src="./images/down.png" alt=""></a>
+                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Привід ...</span>
-                        <a class="prise-link" href=""><img src="./images/down.png" alt=""></a>
+                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Стиль ...</span>
-                        <a class="prise-link" href=""><img src="./images/down.png" alt=""></a>
+                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                     </li>
                 </ul>
             </div>
