--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
                     <li class="prise-item">
                         <span class="prise-item">Ціна ...</span>
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <ul class="order">
+                            <li>
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                     200 ₴ 
+                                </label>
+                                <img src="./images/close1.png" alt="">
+                            </li>
+                            <li>
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    200 - 500 ₴  
+                                </label>
+                            </li>
+                           <li><label for="">
+                            <input class="chech" type="checkbox" name="">
+                            > 1000 ₴
+                        </label></li>
+                        </ul>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Квіти ...</span>
