--- a/index.html
+++ b/index.html
@@ -71,23 +71,25 @@
                         <span class="prise-item">Ціна ...</span>
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                         <ul class="order">
-                            <li>
+                            <li class="order-item">
                                 <label for="">
                                     <input class="chech" type="checkbox" name="">
-                                     200 ₴ 
+                                    200 ₴
                                 </label>
-                                <img src="./images/close1.png" alt="">
+                                <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
-                            <li>
+                            <li class="order-item">
                                 <label for="">
                                     <input class="chech" type="checkbox" name="">
-                                    200 - 500 ₴  
+                                    200 - 500 ₴
                                 </label>
                             </li>
-                           <li><label for="">
-                            <input class="chech" type="checkbox" name="">
-                            > 1000 ₴
-                        </label></li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    > 1000 ₴
+                                </label></li>
+                                <button>Застосувати</button>
                         </ul>
                     </li>
                     <li class="prise-item">
