--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                     <input class="chech" type="checkbox" name="">
                                     > 1000 ₴
                                 </label></li>
-                                <button>Застосувати</button>
+                                <button class="order-btn">Застосувати</button>
                         </ul>
                     </li>
                     <li class="prise-item">
