--- a/index.html
+++ b/index.html
@@ -95,6 +95,52 @@
                     <li class="prise-item">
                         <span class="prise-item">Квіти ...</span>
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <ul class="order">
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Троянда
+                                </label>
+                                <button class="order-close"><img src="./images/close1.png" alt=""></button>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Еустома
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Хризантема
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Лілія
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Тюльпан
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Гортензія
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Альстромерія
+                                </label>
+                            </li>
+                            <button class="order-btn">Застосувати</button>
+                        </ul>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Кому ...</span>
