--- a/index.html
+++ b/index.html
@@ -145,14 +145,92 @@
                     <li class="prise-item">
                         <span class="prise-item">Кому ...</span>
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <ul class="order">
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Жінці
+                                </label>
+                                <button class="order-close"><img src="./images/close1.png"  alt=""></button>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Чоловіку
+                                </label>
+                            </li>
+                                <button class="order-btn">Застосувати</button>
+                        </ul>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Привід ...</span>
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <ul class="order">
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Весілля
+                                </label>
+                                <button class="order-close"><img src="./images/close1.png"  alt=""></button>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Народження 
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Кохання
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Співчуваю
+                                </label>
+                            </li>
+                                <button class="order-btn">Застосувати</button>
+                        </ul>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Стиль ...</span>
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <ul class="order">
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Вільний
+                                </label>
+                                <button class="order-close"><img src="./images/close1.png"  alt=""></button>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Каркасний
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    В коробці
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    В кошику
+                                </label>
+                            </li>
+                            <li class="order-item">
+                                <label for="">
+                                    <input class="chech" type="checkbox" name="">
+                                    Каскадний
+                                </label>
+                            </li>
+                                <button class="order-btn">Застосувати</button>
+                        </ul>
                     </li>
                 </ul>
             </div>
