--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <ul class="prise-list">
                     <li class="prise-item">
                         <span class="prise-item">Ціна ...</span>
-                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="">
@@ -94,7 +94,7 @@
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Квіти ...</span>
-                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="">
@@ -144,7 +144,7 @@
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Кому ...</span>
-                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="">
@@ -196,7 +196,7 @@
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Стиль ...</span>
-                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="">
