--- a/index.html
+++ b/index.html
@@ -372,6 +372,11 @@
             <div class="swiper-button-next"></div>
           </div>
           <hr class="client-line">
+
+          <div id="imageModal" class="modal11">
+            <!-- <span class="close">&times;</span> -->
+            <img class="modal-content" id="modalImage">
+        </div>
     </section>
     <section class="footer">
         <div class="footer-div">
